getting things contained

--- a/src/print_gaps/Makefile
+++ b/src/print_gaps/Makefile
@@ -1,3 +1,2 @@
-
-printgaps:
-g++ main.cpp split.cpp ../../htslib/libhts.a -I ../../htslib/ -lz -o printgaps
+printgaps: main.cpp split.cpp
+	g++ main.cpp split.cpp ../htslib/libhts.a -I ../htslib/ -I ../htslib/htslib -lz -lpthread -o ../../bin/printgaps
