--- a/pipeline/Snakefile
+++ b/pipeline/Snakefile
@@ -128,9 +128,10 @@ rule installBlasr:
      output:  "helper_scripts/blasr"
      params:  sge_opts=config["cluster_settings"]["lite"]
      shell:   """
+            cd src
             git clone https://github.com/mchaisso/blasr.git
             cd blasr
             git checkout 7cc3379a99824f4c3a9a4122f04deadaee50e2f5
             make
-            cp alignment/bin/blasr ../helper_scripts/
+            cp alignment/bin/blasr ../../bin
      """
