--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/htslib"]
 	path = src/htslib
 	url = https://github.com/samtools/htslib.git
+[submodule "src/blasr"]
+	path = src/blasr
+	url = https://github.com/mchaisso/blasr.git
